Correct colour contrast ratio

--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ nav ul li a {
 }
 
 .connect-link {
-  color: #7f8cff;
+  color: #1d33fc;
   font-size: 16px;
   font-weight: 500;
   line-height: 24px;
@@ -135,7 +135,7 @@ nav ul li a {
   font-weight: 600;
   font-size: 13px;
   line-height: 16px;
-  color: #7a869a;
+  color: #4a4f59;
 }
 
 .work-info .info-sep {
@@ -162,7 +162,7 @@ nav ul li a {
   letter-spacing: 3%;
   padding: 4px 12px;
   margin-right: 20px;
-  color: #6070ff;
+  color: #0018f0;
   background-color: #ebebff;
   border-radius: 8px;
 }
@@ -171,10 +171,10 @@ nav ul li a {
   padding: 14px;
   margin-top: 26px;
   margin-bottom: 40px;
-  color: #396df2;
+  color: #1748c4;
   font-size: 17px;
   font-weight: 500;
-  border: solid 2px #396df2;
+  border: solid 2px #1748c4;
   border-radius: 9px;
   background-color: #fff;
   letter-spacing: 3%;
@@ -403,7 +403,7 @@ nav ul li a {
   font-weight: 500;
   font-size: 16px;
   line-height: 24px;
-  color: #7f8cff;
+  color: #1d33fc;
   margin-top: 12px;
   margin-bottom: 12px;
 }
@@ -415,15 +415,15 @@ nav ul li a {
   line-height: 24px;
   letter-spacing: 0.03em;
   display: inline-block;
-  color: #396df2;
+  color: #1748c4;
   padding: 12px;
-  border: 1px solid #396df2;
+  border: 1px solid #1748c4;
   border-radius: 8px;
   margin-top: 22px;
 }
 
 .about .about-info .get-resume:hover {
-  background-color: #396df2;
+  background-color: #1748c4;
   color: #fff;
   transition: 0.3s;
 }
@@ -531,7 +531,7 @@ nav ul li a {
 }
 
 .contact-section form {
-  background-color: #6070ff;
+  background-color: #0f22cc;
   padding: 100px;
   text-align: center;
 }
@@ -591,10 +591,10 @@ nav ul li a {
   padding: 14px;
   margin-top: 26px;
   margin-bottom: 40px;
-  color: #396df2;
+  color: #1748c4;
   font-size: 17px;
   font-weight: 500;
-  border: solid 2px #396df2;
+  border: solid 2px #1748c4;
   border-radius: 9px;
   background-color: #fff;
   letter-spacing: 3%;
